--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 18:01]
+#+CAPTION: Clock summary at [2017-02-02 Thu 18:13]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:46* |       |       | 100.0 |
+| *Total time*                                                                | *33:57* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:46   |       |       | 100.0 |
-| Active                                                                      |         | 33:46 |       | 100.0 |
+| Stories                                                                     | 33:57   |       |       | 100.0 |
+| Active                                                                      |         | 33:57 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.1 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.3 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  16.1 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  16.0 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.7 |
-| STARTED Inclusion directive logic is too complex                            |         |       |  1:06 |   3.3 |
-| STARTED Handle "special includes" generically                               |         |       |  8:38 |  25.6 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  36.3 |
+| STARTED Inclusion directive logic is too complex                            |         |       |  1:17 |   3.8 |
+| STARTED Handle "special includes" generically                               |         |       |  8:38 |  25.4 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  36.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -193,6 +193,7 @@ executed and the way boolean works:
   match the expectations of the tests.
 
 *** STARTED Inclusion directive logic is too complex                  :story:
+    CLOCK: [2017-02-02 Thu 18:02]--[2017-02-02 Thu 18:13] =>  0:11
     CLOCK: [2017-02-02 Thu 17:25]--[2017-02-02 Thu 18:01] =>  0:36
     CLOCK: [2017-02-02 Thu 16:54]--[2017-02-02 Thu 17:24] =>  0:30
 
