--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 18:16]
+#+CAPTION: Clock summary at [2017-02-02 Thu 18:27]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:00* |       |       | 100.0 |
+| *Total time*                                                                | *34:09* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:00   |       |       | 100.0 |
-| Active                                                                      |         | 34:00 |       | 100.0 |
+| Stories                                                                     | 34:09   |       |       | 100.0 |
+| Active                                                                      |         | 34:09 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.1 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.3 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.2 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  16.0 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.9 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.7 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.9 |
-| STARTED Handle "special includes" generically                               |         |       |  8:38 |  25.4 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  36.0 |
+| STARTED Handle "special includes" generically                               |         |       |  8:47 |  25.7 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  35.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -250,6 +250,7 @@ Cases:
 | Non-proxy model                             |             | Generate directives          |
 
 *** STARTED Handle "special includes" generically                     :story:
+    CLOCK: [2017-02-02 Thu 18:18]--[2017-02-02 Thu 18:27] =>  0:09
     CLOCK: [2017-02-02 Thu 15:09]--[2017-02-02 Thu 15:35] =>  0:26
     CLOCK: [2017-02-02 Thu 15:04]--[2017-02-02 Thu 15:08] =>  0:04
     CLOCK: [2017-02-02 Thu 14:03]--[2017-02-02 Thu 15:03] =>  1:00
