--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 20:32]
+#+CAPTION: Clock summary at [2017-02-02 Thu 20:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:26* |       |       | 100.0 |
+| *Total time*                                                                | *34:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:26   |       |       | 100.0 |
-| Active                                                                      |         | 34:26 |       | 100.0 |
+| Stories                                                                     | 34:29   |       |       | 100.0 |
+| Active                                                                      |         | 34:29 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.1 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.1 |
@@ -28,8 +28,8 @@
 | COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.8 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.6 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.9 |
-| STARTED Handle "special includes" generically                               |         |       |  9:04 |  26.3 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  35.6 |
+| STARTED Handle "special includes" generically                               |         |       |  9:07 |  26.4 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  35.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -250,6 +250,7 @@ Cases:
 | Non-proxy model                             |             | Generate directives          |
 
 *** STARTED Handle "special includes" generically                     :story:
+    CLOCK: [2017-02-02 Thu 20:33]--[2017-02-02 Thu 20:36] =>  0:03
     CLOCK: [2017-02-02 Thu 20:15]--[2017-02-02 Thu 20:32] =>  0:17
     CLOCK: [2017-02-02 Thu 18:18]--[2017-02-02 Thu 18:27] =>  0:09
     CLOCK: [2017-02-02 Thu 15:09]--[2017-02-02 Thu 15:35] =>  0:26
