--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 20:36]
+#+CAPTION: Clock summary at [2017-02-02 Thu 22:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:29* |       |       | 100.0 |
+| *Total time*                                                                | *35:17* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:29   |       |       | 100.0 |
-| Active                                                                      |         | 34:29 |       | 100.0 |
+| Stories                                                                     | 35:17   |       |       | 100.0 |
+| Active                                                                      |         | 35:17 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.1 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  12.1 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.0 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  11.8 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.8 |
-| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.6 |
-| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.9 |
-| STARTED Handle "special includes" generically                               |         |       |  9:07 |  26.4 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  35.5 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.4 |
+| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.5 |
+| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.8 |
+| STARTED Handle "special includes" generically                               |         |       |  9:55 |  28.1 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  34.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -250,6 +250,8 @@ Cases:
 | Non-proxy model                             |             | Generate directives          |
 
 *** STARTED Handle "special includes" generically                     :story:
+    CLOCK: [2017-02-02 Thu 22:15]--[2017-02-02 Thu 22:40] =>  0:25
+    CLOCK: [2017-02-02 Thu 20:37]--[2017-02-02 Thu 21:00] =>  0:23
     CLOCK: [2017-02-02 Thu 20:33]--[2017-02-02 Thu 20:36] =>  0:03
     CLOCK: [2017-02-02 Thu 20:15]--[2017-02-02 Thu 20:32] =>  0:17
     CLOCK: [2017-02-02 Thu 18:18]--[2017-02-02 Thu 18:27] =>  0:09
