--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 23:18]
+#+CAPTION: Clock summary at [2017-02-02 Thu 23:23]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:52* |       |       | 100.0 |
+| *Total time*                                                                | *35:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:52   |       |       | 100.0 |
-| Active                                                                      |         | 35:52 |       | 100.0 |
+| Stories                                                                     | 35:56   |       |       | 100.0 |
+| Active                                                                      |         | 35:56 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.0 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  11.6 |
@@ -28,8 +28,8 @@
 | COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.1 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.5 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.7 |
-| STARTED Handle "special includes" generically                               |         |       | 10:30 |  29.3 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  34.2 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  29.4 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  34.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -249,7 +249,9 @@ Cases:
 | Proxy model that requires some overrides    | std::string | detect presence of override. |
 | Non-proxy model                             |             | Generate directives          |
 
-*** STARTED Handle "special includes" generically                     :story:
+*** COMPLETED Handle "special includes" generically                   :story:
+    CLOSED: [2017-02-02 Thu 23:23]
+    CLOCK: [2017-02-02 Thu 23:19]--[2017-02-02 Thu 23:23] =>  0:04
     CLOCK: [2017-02-02 Thu 23:06]--[2017-02-02 Thu 23:18] =>  0:12
     CLOCK: [2017-02-02 Thu 22:55]--[2017-02-02 Thu 23:05] =>  0:10
     CLOCK: [2017-02-02 Thu 22:41]--[2017-02-02 Thu 22:54] =>  0:13
