--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-02 Thu 23:23]
+#+CAPTION: Clock summary at [2017-02-02 Thu 23:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:56* |       |       | 100.0 |
+| *Total time*                                                                | *36:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:56   |       |       | 100.0 |
-| Active                                                                      |         | 35:56 |       | 100.0 |
+| Stories                                                                     | 36:10   |       |       | 100.0 |
+| Active                                                                      |         | 36:10 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   2.0 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  11.6 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  11.5 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.6 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.1 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  15.0 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.5 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.7 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  29.4 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 12:15 |  34.1 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  29.2 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 12:29 |  34.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -314,6 +314,7 @@ Tasks:
 - change code to also include auxiliary directives.
 
 *** STARTED Add support for primitives across the pipeline            :story:
+    CLOCK: [2017-02-02 Thu 23:24]--[2017-02-02 Thu 23:38] =>  0:14
     CLOCK: [2017-02-01 Wed 14:02]--[2017-02-01 Wed 15:08] =>  1:06
     CLOCK: [2017-02-01 Wed 11:40]--[2017-02-01 Wed 12:01] =>  0:21
     CLOCK: [2017-02-01 Wed 11:06]--[2017-02-01 Wed 11:39] =>  0:33
