--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-04 Sat 15:27]
+#+CAPTION: Clock summary at [2017-02-04 Sat 16:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:11* |       |       | 100.0 |
+| *Total time*                                                                | *42:38* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:11   |       |       | 100.0 |
-| Active                                                                      |         | 42:11 |       | 100.0 |
+| Stories                                                                     | 42:38   |       |       | 100.0 |
+| Active                                                                      |         | 42:38 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.7 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.9 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.8 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.5 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  12.9 |
-| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   3.0 |
-| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.2 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  25.0 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  12.7 |
+| COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.9 |
+| COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.1 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  24.8 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   2.0 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  39.0 |
+| STARTED Improve compilation times                                           |         |       |  0:27 |   1.1 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  38.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -369,6 +370,16 @@ template parameters" in the type. This could be set in the meta-data
 for STL containers. Or we could actually specify the template
 parameters as "type arguments" just like we do with operations and
 properties (preferred). The parser would then use this info.
+
+*** STARTED Improve compilation times                                 :story:
+    CLOCK: [2017-02-04 Sat 16:01]--[2017-02-04 Sat 16:28] =>  0:27
+
+At present on GCC we are just about coping with the compilation time
+limit of 50 mins; occasionally we get red builds due to this. However,
+we need to add a lot more code so this is not sustainable in the
+medium term. We should try to remove all the facets which we don't
+really need from the core models to see if we can reduce the build
+time by a fair bit (5 mins or more).
 
 *** STARTED Add support for primitives across the pipeline            :story:
     CLOCK: [2017-02-04 Sat 08:15]--[2017-02-04 Sat 08:26] =>  0:11
