--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-04 Sat 16:28]
+#+CAPTION: Clock summary at [2017-02-04 Sat 16:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:38* |       |       | 100.0 |
+| *Total time*                                                                | *42:43* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:38   |       |       | 100.0 |
-| Active                                                                      |         | 42:38 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.9 |
+| Stories                                                                     | 42:43   |       |       | 100.0 |
+| Active                                                                      |         | 42:43 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.7 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.8 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   0.5 |
 | COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  12.7 |
 | COMPLETED Test data for booleans is not oscillating correctly               |         |       |  1:15 |   2.9 |
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.1 |
-| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  24.8 |
+| COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  24.7 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   2.0 |
-| STARTED Improve compilation times                                           |         |       |  0:27 |   1.1 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  38.6 |
+| STARTED Improve compilation times                                           |         |       |  0:32 |   1.2 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  38.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -372,6 +372,7 @@ parameters as "type arguments" just like we do with operations and
 properties (preferred). The parser would then use this info.
 
 *** STARTED Improve compilation times                                 :story:
+    CLOCK: [2017-02-04 Sat 16:29]--[2017-02-04 Sat 16:34] =>  0:05
     CLOCK: [2017-02-04 Sat 16:01]--[2017-02-04 Sat 16:28] =>  0:27
 
 At present on GCC we are just about coping with the compilation time
