--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-04 Sat 16:34]
+#+CAPTION: Clock summary at [2017-02-04 Sat 16:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:43* |       |       | 100.0 |
+| *Total time*                                                                | *42:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:43   |       |       | 100.0 |
-| Active                                                                      |         | 42:43 |       | 100.0 |
+| Stories                                                                     | 42:44   |       |       | 100.0 |
+| Active                                                                      |         | 42:44 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.7 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.8 |
@@ -30,7 +30,7 @@
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.1 |
 | COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  24.7 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   2.0 |
-| STARTED Improve compilation times                                           |         |       |  0:32 |   1.2 |
+| STARTED Improve compilation times                                           |         |       |  0:33 |   1.3 |
 | STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  38.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -372,6 +372,7 @@ parameters as "type arguments" just like we do with operations and
 properties (preferred). The parser would then use this info.
 
 *** STARTED Improve compilation times                                 :story:
+    CLOCK: [2017-02-04 Sat 16:35]--[2017-02-04 Sat 16:36] =>  0:01
     CLOCK: [2017-02-04 Sat 16:29]--[2017-02-04 Sat 16:34] =>  0:05
     CLOCK: [2017-02-04 Sat 16:01]--[2017-02-04 Sat 16:28] =>  0:27
 
