--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-04 Sat 17:24]
+#+CAPTION: Clock summary at [2017-02-04 Sat 17:27]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *43:30* |       |       | 100.0 |
+| *Total time*                                                                | *43:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 43:30   |       |       | 100.0 |
-| Active                                                                      |         | 43:30 |       | 100.0 |
+| Stories                                                                     | 43:32   |       |       | 100.0 |
+| Active                                                                      |         | 43:32 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:13 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   1.6 |
 | COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |   9.6 |
@@ -30,8 +30,8 @@
 | COMPLETED Inclusion directive logic is too complex                          |         |       |  1:20 |   3.1 |
 | COMPLETED Handle "special includes" generically                             |         |       | 10:34 |  24.3 |
 | POSTPONED Partial matching of built-ins doesn't work for certain types      |         |       |  0:50 |   1.9 |
-| STARTED Improve compilation times                                           |         |       |  1:19 |   3.0 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  37.9 |
+| STARTED Improve compilation times                                           |         |       |  1:21 |   3.1 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 16:28 |  37.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -372,6 +372,7 @@ parameters as "type arguments" just like we do with operations and
 properties (preferred). The parser would then use this info.
 
 *** STARTED Improve compilation times                                 :story:
+    CLOCK: [2017-02-04 Sat 17:25]--[2017-02-04 Sat 17:27] =>  0:02
     CLOCK: [2017-02-04 Sat 17:23]--[2017-02-04 Sat 17:24] =>  0:01
     CLOCK: [2017-02-04 Sat 16:37]--[2017-02-04 Sat 17:22] =>  0:45
     CLOCK: [2017-02-04 Sat 16:35]--[2017-02-04 Sat 16:36] =>  0:01
