--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -371,7 +371,8 @@ for STL containers. Or we could actually specify the template
 parameters as "type arguments" just like we do with operations and
 properties (preferred). The parser would then use this info.
 
-*** STARTED Improve compilation times                                 :story:
+*** STARTED Try to improve compilation times                          :story:
+    CLOCK: [2017-02-04 Sat 17:32]--[2017-02-04 Sat 17:37] =>  0:05
     CLOCK: [2017-02-04 Sat 17:28]--[2017-02-04 Sat 17:31] =>  0:03
     CLOCK: [2017-02-04 Sat 17:25]--[2017-02-04 Sat 17:27] =>  0:02
     CLOCK: [2017-02-04 Sat 17:23]--[2017-02-04 Sat 17:24] =>  0:01
